--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Tuan singer</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/themify-icons/themify-icons.css">
 </head>
 <body>
@@ -140,15 +141,15 @@
                             <i class="ti-shopping-cart"></i>
                             Tickets, $... (tùy tâm)
                         </label>
-                        <input id="modal-quantity" type="text" class="modal-input" placeholder="How many?">
+                        <input id="modal-quantity" type="text" required class="modal-input" placeholder="How many?">
 
                         <label for="modal-email" class="modal-label">
                             <i class="ti-user"></i>
                             Send to
                         </label>
-                        <input id="modal-email" type="email" class="modal-input" placeholder="Enter your email...">
+                        <input id="modal-email" type="email" required class="modal-input" placeholder="Enter your email...">
 
-                        <button class="buy-tickets">
+                        <button onclick="showSuccessToast();" class="buy-tickets">
                             Pay <i class="ti-check"></i>
                         </button>
                     </div>
@@ -287,5 +288,71 @@
 
     </script>
 
+ <!-- hiện lên thông báo thành công khi ấn pay ở phần modals -->
+<div id="toast"></div>
+
+<script>
+    function toast({
+        title = '',
+        message = '',
+        type = 'info',
+        duration = 3000})
+    {
+        const main =document.getElementById('toast');
+        if (main)
+        {
+            const toast = document.createElement('div');
+
+            // Auto remove toast
+            const autoRemoveId = setTimeout(function() {
+                main.removeChild(toast);
+            },duration +1000);
+
+            // remove toast when clicked
+            toast.onclick = function (e) 
+            {
+                main.removeChild(toast);
+                clearTimeout(autoRemoveId);
+            }
+
+            const icons = {
+                success: "fas fa-check-circle",
+                info: "fas fa-info-circle",
+                warning: "fas fa-exclamation-circle",
+                error: "fas fa-exclamation-circle"
+            };
+            const icon = icons[type];
+            
+            toast.classList.add('toast', `toast--${type}`);
+            const delay = (duration / 1000 ).toFixed(2);
+
+            toast.style.animation = `slideinleft ease 0.3s, fadeOut linear 1s ${delay}s forwards`;
+            toast.innerHTML = `
+                <div class="toast__icon">
+                    <i class="${icon}"></i>
+                </div>
+                <div class="toast__body">
+                    <h3 class="toast__title">${title}</h3>
+                    <p class="toast__msg">${message}</p>
+                </div>
+                <div class="toast__close">
+                    <i class="fa-solid fa-xmark"></i>
+                </div>
+            `;
+            main.appendChild(toast);
+
+        }
+    }
+
+    function showSuccessToast() 
+    {
+        toast({
+        title:'Success',
+        message:'Ký chủ đã thành công bấm vào nút ',
+        type:'success',
+        duration: 5000
+    });
+    }
+</script>
 </body>
 </html>
